# KCP

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README.zh-CN.md  a.out  code_style.cpp  code_style.md  实验要求.md
clion-plugin/native/: CMakeLists.txt
clion-plugin/native/src/: api.cppm  main.cpp
clion-plugin/native/tests/: api_behavior_test.cpp
codegen/ir/: CMakeLists.txt  ir.cppm
codegen/llvm/: CMakeLists.txt  llvm.cppm
compiler/: CMakeLists.txt  import_resolver.cppm
compiler/tool/: main.cpp
diagnostic/: CMakeLists.txt  catalog.cppm  collector.cppm  diagnostic.cppm  kind.cppm  record.cppm  stage.cppm
lexer/: CMakeLists.txt  README.md  charset.cppm  cursor.cppm  keyword.cppm  lexer.cppm  literal.cppm  punctuation.cppm  regex.md  state.cppm  token.cppm
lexer/core/: lexer.cppm  scanner.cppm
lexer/diagnostic/: concepts.cppm  diagnostic.cppm
lexer/docs/: regex.md
lexer/scanner/: engine.cppm  keyword.cppm  literal.cppm  reporter.cppm  scanner.cppm
lexer/support/: diagnostic.cppm  source.cppm  tables.cppm  token.cppm
lexer/token/: token.cppm
parser/: CMakeLists.txt  README.md  expression.cppm  parser.cppm  program.cppm  state.cppm  statement.cppm  type.cppm
parser/ast/: arena.cppm  ast.cppm  expr.cppm  ids.cppm  item.cppm  name.cppm  source.cppm  stmt.cppm  type.cppm  visit.cppm
parser/core/: expression_precedence.cppm  grammar.cppm  operator_precedence.cppm  parser.cppm  recursive_descent.cppm
parser/diagnostic/: diagnostic.cppm
parser/docs/: ll1_experiment.md  op_precedence_experiment.md  parser_pipeline.md  parser_theory_to_code_tutorial.md
parser/expression/: precedence.cppm
parser/ll1/: grammar.cppm
parser/lr/: README.md
parser/op/: operator_precedence.cppm  trace.cppm
parser/support/: ast.cppm  diagnostic.cppm  trace.cppm
parser/syntax/: recursive_descent.cppm  result.cppm  syntax.cppm
parser/syntax/recursive_descent/: context.cppm  expression.cppm  program.cppm  statement.cppm  type.cppm
parser/tool/: main.cpp  op_precedence_demo.cpp
preprocessor/: CMakeLists.txt  README.md  core.cppm  preprocessed.cppm  preprocessor.cppm
preprocessor/core/: preprocessor.cppm  scanner.cppm
preprocessor/diagnostic/: diagnostic.cppm
preprocessor/docs/: pipeline.md
preprocessor/preprocessed/: preprocessed.cppm
preprocessor/scanner/: scanner.cppm
preprocessor/support/: diagnostic.cppm  issue.cppm  output.cppm  preprocessed.cppm
semantic/: CMakeLists.txt  enums.cppm  expressions.cppm  generics.cppm  lambda.cppm  modules.cppm  result.cppm  return_infer.cppm  semantic.cppm  statements.cppm  symbol.cppm  types.cppm  variants.cppm
semantic/check/: analyzer.cppm  check.cppm  concepts.cppm  context.cppm  expressions.cppm  keys.cppm  state.cppm  statements.cppm  types.cppm
semantic/diagnostic/: diagnostic.cppm
semantic/result/: keys.cppm  result.cppm
semantic/symbol/: symbol.cppm
semantic/ty/: arena.cppm  builtin.cppm  ids.cppm  nodes.cppm  type.cppm
semantic/type/: arena.cppm  builtin.cppm  ids.cppm  nodes.cppm  type.cppm
test/benchmark/: CMakeLists.txt  runner.cpp
test/benchmark/cases/allocation_churn/: case.cp  case.cpp  case.java  case.rs
test/benchmark/cases/branch_loop/: case.cp  case.cpp  case.java  case.rs
test/benchmark/cases/call_dense/: case.cp  case.cpp  case.java  case.rs
test/benchmark/cases/generic_mix/: case.cp  case.cpp  case.java  case.rs
test/benchmark/cases/int_loop/: case.cp  case.cpp  case.java  case.rs
test/benchmark/cases/pointer_walk/: case.cp  case.cpp  case.java  case.rs
test/benchmark/cases/std_map_set/: case.cp  case.cpp  case.java  case.rs
test/benchmark/cases/std_sort/: case.cp  case.cpp  case.rs
test/benchmark/cases/std_sort_owned_string/: case.cp  case.cpp  case.rs
test/benchmark/cases/std_sort_record/: case.cp  case.cpp  case.rs
test/benchmark/cases/std_sort_string/: case.cp  case.cpp  case.rs
test/benchmark/cases/std_sort_unique_string/: case.cp  case.cpp  case.rs
test/benchmark/cases/std_vector_string/: case.cp  case.cpp  case.java  case.rs
test/compiler/: CMakeLists.txt
test/compiler/suites/: behavior_test.cpp  import_resolver_test.cpp
test/diagnostic/: CMakeLists.txt
test/diagnostic/suites/: behavior_test.cpp
test/harness/: CMakeLists.txt  jsonl.cpp  jsonl.hpp
test/lab/: CMakeLists.txt
test/lab/suites/: lexer_behavior_test.cpp  operator_precedence_behavior_test.cpp  parser_behavior_test.cpp  semantic_ir_behavior_test.cpp
test/lexer/: CMakeLists.txt
test/lexer/cases/invalid/chars/: dangling_escape.diag  dangling_escape.diag.jsonl  dangling_escape.tokens  dangling_escape.tokens.jsonl  empty.diag  empty.diag.jsonl  empty.tokens  empty.tokens.jsonl  invalid_hex_escape.diag.jsonl  invalid_hex_escape.tokens  invalid_hex_escape.tokens.jsonl  multi_char.diag  multi_char.diag.jsonl  multi_char.tokens  multi_char.tokens.jsonl  unknown_escape.diag  unknown_escape.lex  unknown_escape.tokens  unknown_escape.tokens.jsonl  unterminated_eof.diag.jsonl  unterminated_eof.tokens  unterminated_eof.tokens.jsonl  unterminated_newline.diag  unterminated_newline.tokens  unterminated_newline.tokens.jsonl
test/lexer/cases/invalid/comments/: unterminated_block.diag  (+6 more)
test/lexer/harness/: assert.hpp  case_io.hpp  case_types.hpp  runner.hpp
test/lexer/suites/: api_behavior_test.cpp  classification_test.cpp  invalid_cases_test.cpp  support_behavior_test.cpp  tables_test.cpp  valid_cases_test.cpp
test/module/: CMakeLists.txt  main.cpp  smoke.cppm
test/parser/: CMakeLists.txt
test/parser/harness/: assert.hpp  case_io.hpp  case_types.hpp  runner.hpp
test/parser/suites/: api_behavior_test.cpp  invalid_cases_test.cpp  ll1_behavior_test.cpp  op_precedence_test.cpp  valid_cases_test.cpp
test/preprocessor/: CMakeLists.txt
test/preprocessor/harness/: assert.hpp  case_io.hpp  case_types.hpp  runner.hpp
test/preprocessor/suites/: api_behavior_test.cpp  invalid_cases_test.cpp  valid_cases_test.cpp
test/runtime/: CMakeLists.txt
test/runtime/suites/: runtime_api_test.cpp
test/semantic/: CMakeLists.txt
test/semantic/suites/: behavior_test.cpp  result_api_test.cpp
(+531 files in other folders)
